--- a/package.json
+++ b/package.json
@@ -1,11 +1,38 @@
 {
-  "name": "backend-epik-eco",
+  "name": "typescript-boilerplate",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node-dev src/index.ts"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/multer": "^1.4.7",
+    "apollo-server": "^3.10.3",
+    "argon2": "^0.30.2",
+    "class-validator": "^0.13.2",
+    "graphql": "^15.8.0",
+    "graphql-upload": "^13.0.0",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.8.0",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.1.1",
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.3.10"
+  },
+  "devDependencies": {
+    "@types/graphql-upload": "^8.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.5",
+    "eslint-plugin-promise": "^6.0.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.2"
+  }
 }
