--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-validator": "^0.13.2",
     "graphql": "^15.8.0",
     "graphql-upload": "^13.0.0",
+    "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/graphql-upload": "^8.0.12",
+    "@types/jsonwebtoken": "^8.5.9",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
