--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev src/index.ts"
+    "start": "ts-node-dev src/index.ts",
+    "docker": "docker compose up --build",
+    "docker -f": "docker compose up --build --force-recreate"
   },
   "author": "",
   "license": "ISC",
