--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch",
     "start": "ts-node-dev src/index.ts"
   },
   "author": "",
@@ -25,6 +25,7 @@
     "typeorm": "^0.3.10"
   },
   "devDependencies": {
+    "@jest/globals": "^29.3.1",
     "@types/graphql-upload": "^8.0.12",
     "@types/jsonwebtoken": "^8.5.9",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -34,6 +35,8 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-promise": "^6.0.1",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.2"
   }
