--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,9 @@ services:
       # autoreload des changements des dossier src et test de notre pc vers ceux du conteneur docker
       - ./src/:/app/src
       - ./tests/:/app/tests
-    # Décommenter pour executer les tests plustôt que l'api
-    command: npm test ./tests
+    # Variables d'environnment
+    environment:
+      - DB_HOST=db
   db:
     image: postgres
     environment:
