Context authChecker retruns current user me

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     # Variables d'environnment
     environment:
       - DB_HOST=db
+    env_file:
+      - .env
   db:
     image: postgres
     environment:
