--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "docker": "docker compose up --build",
     "docker -f": "docker compose up --build --force-recreate",
+    "docker-test": "docker compose -f docker-compose.test.yml up",
     "test": "JWT_SECRET=supersecret jest --watch",
     "start": "ts-node-dev --poll --respawn --transpile-only src/index.ts"
   },
