--- a/.github/workflows/jest-ci.yml
+++ b/.github/workflows/jest-ci.yml
@@ -8,7 +8,7 @@ jobs:
     services:
       db:
         image: postgres
-        environment:
+        env:
           POSTGRES_PASSWORD: secret
         ports:
           - 5432:5432
