--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "docker -f": "docker compose up --build --force-recreate",
     "docker-test": "docker compose -f docker-compose.test.yml up",
     "test": "JWT_SECRET=supersecret jest --watch",
+    "test-ci": "JWT_SECRET=supersecret jest ./tests/app.test.ts",
     "start": "ts-node-dev --poll --respawn --transpile-only src/index.ts"
   },
   "author": "",
