--- a/.github/workflows/jest-ci.yml
+++ b/.github/workflows/jest-ci.yml
@@ -34,5 +34,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
+          context: .
+          platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/epikeco_back:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/epikeco_back:staging
