--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "graphql-upload": "^13.0.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.1.1",
