--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@jest/globals": "^29.3.1",
     "@types/graphql-upload": "^8.0.12",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/node-cron": "^3.0.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
